--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="css/style.css">   
 </head>
 <body>
-
+    <div class="body__wrapper">
+        <div class="card">
+            <div class="card__item"></div>
+        </div>
+        <div class="card">
+            <div class="card__item"></div>
+        </div>
+        <div class="card">
+            <div class="card__item"></div>
+        </div>   
+    </div>
+    <script src="js/main.js"></script>
 </body>       
 </html>
