Поворот при наведении

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 <body>
     <div class="body__wrapper">
         <div class="card">
-            <div class="card__item"></div>
+            <div class="card__item">
+                <img src="img/test.jpg" alt="" class="card__img">
+            </div>
         </div>
         <div class="card">
-            <div class="card__item"></div>
+            <div class="card__item">
+                <img src="img/test2.jpg" alt="Пейзаж" class="card__img">    
+            </div>
         </div>
         <div class="card">
-            <div class="card__item"></div>
+            <div class="card__item">
+                <img src="img/test3.jpg" alt="Пейзаж" class="card__img">
+            </div>
         </div>   
     </div>
     <script src="js/main.js"></script>
